ServerSentinel/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: serversentinel
  labels:
    name: serversentinel
    environment: production
